--- a/style.css
+++ b/style.css
@@ -1,21 +1,41 @@
 html {
     height: 100%;
     width: 100%;
+    background-color: rgb(63, 109, 127);
   }
 
   .body {
-    background-color: darkblue;
+    background-color:rgb(63, 109, 127);
   }
-  
-  .h2 {
-      width: 100%;
-      display: inline-block;
+  .header {
+    background-color: rgb(50, 90, 106);
+    width: 100%;
+    display: inline-block;
+    font-size: 30px;
+  }
+  .Title {
+    background-color: rgb(50, 90, 106);
+    width: 100%;
+    display: inline-block;
+    font-size: 30px;
+    text-align: center;
+    padding-bottom: 20px;
   }
   .SelectOptions{
       text-align: left;
       margin-left: 20%;
+      background-color: rgb(50, 90, 106);
   }
   .SelectSection {
       text-align: justify;
       text-align: center;
+      background-color: rgb(50, 90, 106);
+  }
+  #Input{
+    align-self:left;
+    width: auto;
+  }
+  #SelectBody{
+    width: 60%;
+    align-self: right;
   }
