--- a/style.css
+++ b/style.css
@@ -39,3 +39,13 @@ html {
     float: right;
     word-wrap: break-word;
   }
+  .text{
+    width: 100%;
+    background-color: rgb(242, 175, 87);
+  }
+.picture{
+    background-color: aqua;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
